...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wsy-ZC-f5s">
                                <rect key="frame" x="200" y="95" width="200" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="G3H-JY-7G9"/>
                                    <constraint firstAttribute="width" constant="200" id="pwR-aH-j5n"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" keyboardAppearance="alert"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Gw-KN-Uvr">
                                <rect key="frame" x="200" y="133" width="200" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="IkF-UZ-Hi2"/>
                                    <constraint firstAttribute="width" constant="200" id="n7Z-z8-lSe"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                    <constraint firstAttribute="width" constant="135" id="49C-i5-Ae3"/>
                                    <constraint firstAttribute="height" constant="45" id="QHR-JK-YWW"/>
                                </constraints>
                                <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Find Location">
                                            <attributes>
                                                <color key="NSColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <font key="NSFont" size="24" name="SFUIDisplay-Black"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
...
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sli-Jt-5rd">
                                <rect key="frame" x="0.0" y="118" width="600" height="379"/>
                                <color key="backgroundColor" red="0.56078431370000004" green="0.74901960779999999" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
                            </view>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" placeholder="MountainView, CA" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="jFY-BO-fmj">
                                <rect key="frame" x="38" y="146" width="526" height="324"/>
                                <color key="backgroundColor" red="0.56078431370000004" green="0.74901960779999999" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                            </textField>
...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d0P-tc-Byy">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D61-jt-H2E">
                                        <rect key="frame" x="0.0" y="117" width="600" height="133"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="http://udacity.com" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g6E-2Y-wGA">
                                                <rect key="frame" x="19" y="19" width="562" height="90"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="90" id="zcF-to-N4D"/>
                                                </constraints>
                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="41" id="Pva-bZ-LGl"/>
                                            <constraint firstAttribute="width" constant="111" id="Qe5-tR-8ao"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <state key="normal" title="Submit">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="userPressedSubmit:" destination="dvl-Gf-4yc" eventType="touchUpInside" id="BhS-P2-yBa"/>
                                        </connections>
                                    </button>
...
