//
//  OnTheMapUITests.swift
//  OnTheMapUITests
//
//  Created by Denis Ricard on 2016-03-10.
//  Copyright © 2016 Denis Ricard. All rights reserved.
//

import XCTest

class OnTheMapUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        app.textFields["Email"].tap()
        app.textFields["Email"]
        app.secureTextFields["Password"].tap()
        app.secureTextFields["Password"]
        app.buttons["Login"].tap()
        app.navigationBars["UITabBar"].buttons["MapNavBarItem"].tap()
        app.textFields["MountainView, CA"].tap()
        app.textFields["MountainView, CA"]
        app.buttons["Find Location"].tap()
        app.textFields["http://udacity.com"].tap()
        app.textFields["http://udacity.com"]
        app.buttons["Submit"].tap()
        
        
    }
    
}
